--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,61 @@
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-blinker==1.7.0
-Brlapi==0.8.5
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==25.1.4
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-cryptography==41.0.7
-cupshelpers==1.0
-dbus-python==1.3.2
-defer==1.0.6
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.10.0
+attrs==25.3.0
+beautifulsoup4==4.13.5
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+ddgs==9.5.5
 distro==1.9.0
-distro-info==1.7+build1
-httplib2==0.20.4
-idna==3.6
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-louis==3.29.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+fastuuid==0.12.0
+filelock==3.19.1
+frozenlist==1.7.0
+fsspec==2025.9.0
+h11==0.16.0
+hf-xet==1.1.9
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.34.4
+idna==3.10
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+jiter==0.10.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+litellm==1.76.3
+lxml==6.0.1
+markdown-it-py==4.0.0
+markdownify==1.2.0
+MarkupSafe==3.0.2
 mdurl==0.1.2
-netaddr==0.8.0
-oauthlib==3.2.2
-olefile==0.46
-pexpect==4.9.0
-pillow==10.2.0
-ptyprocess==0.7.0
-pycairo==1.25.1
-pycups==2.0.1
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu5
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-screen-resolution-extra==0.0.0
-setuptools==68.1.2
-six==1.16.0
-systemd-python==235
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-wadllib==1.3.6
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
+multidict==6.6.4
+openai==1.106.1
+packaging==25.0
+pillow==11.3.0
+primp==0.15.0
+propcache==0.3.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+python-dotenv==1.1.1
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2025.9.1
+requests==2.32.5
+rich==14.1.0
+rpds-py==0.27.1
+six==1.17.0
+smolagents==1.21.3
+sniffio==1.3.1
+soupsieve==2.8
+tiktoken==0.11.0
+tokenizers==0.22.0
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+yarl==1.20.1
+zipp==3.23.0
