--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,19 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+async-timeout==5.0.1
 attrs==25.3.0
 beautifulsoup4==4.13.5
+blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
 ddgs==9.5.5
 distro==1.9.0
+exceptiongroup==1.3.0
 fastuuid==0.12.0
 filelock==3.19.1
+Flask==3.1.2
 frozenlist==1.7.0
 fsspec==2025.9.0
 h11==0.16.0
@@ -21,6 +25,7 @@ httpx==0.28.1
 huggingface-hub==0.34.4
 idna==3.10
 importlib_metadata==8.7.0
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
 jsonschema==4.25.1
@@ -38,10 +43,12 @@ pillow==11.3.0
 primp==0.15.0
 propcache==0.3.2
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 python-dotenv==1.1.1
 PyYAML==6.0.2
+redis==6.4.0
 referencing==0.36.2
 regex==2025.9.1
 requests==2.32.5
@@ -57,5 +64,6 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+Werkzeug==3.1.3
 yarl==1.20.1
 zipp==3.23.0
