refactor: Refatora API para processamento assíncrono com Redis Pub/Sub
- Implementa arquitetura de jobs assíncronos para classificação de part numbers.
- Cria módulo `jobs.py` com função `start_single_classification_job` que publica progresso, sucesso e falha via Redis.
- Refatora `routes.py` para iniciar jobs em thread separada e utilizar o novo publisher.
- Adiciona e ajusta schemas Pydantic para incluir `job_id` em todas as mensagens de progresso, sucesso e erro.
- Cria classe `RedisPublisher` em `extensions.py` para centralizar publicação no Redis.
- Atualiza documentação da API (`docs/api.md`) detalhando o fluxo, payloads e exemplos de integração.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+ENVIRONMENT=development
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0 
+
+NEXA_API=http://localhost:5000
+
 LITELLM_REQUEST_TIMEOUT=1800
