refactor: manager agent
- increase the ollama timeout

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-LITELLM_REQUEST_TIMEOUT=1800
+LITELLM_REQUEST_TIMEOUT=1800 # ollama request timeout in seconds.
+OLLAMA_NUM_PARALLEL=4        # ollama model's concurrency limit.
