--- a/requirements.txt
+++ b/requirements.txt
@@ -65,5 +65,6 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+Wikipedia-API==0.8.1
 yarl==1.20.1
 zipp==3.23.0
