--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,16 @@ async-timeout==5.0.1
 attrs==25.3.0
 beautifulsoup4==4.13.5
 blinker==1.9.0
+camelot-py==1.0.9
 certifi==2025.8.3
+cffi==2.0.0
+chardet==5.2.0
 charset-normalizer==3.4.3
 click==8.2.1
+cryptography==46.0.2
 ddgs==9.5.5
 distro==1.9.0
+et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 fastuuid==0.12.0
 filelock==3.19.1
@@ -37,16 +42,27 @@ markdownify==1.2.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.6.4
+numpy==2.2.6
 openai==1.106.1
+opencv-python-headless==4.12.0.88
+openpyxl==3.1.5
 packaging==25.0
+pandas==2.3.3
+pdfminer.six==20250506
+pdfplumber==0.11.7
 pillow==11.3.0
 primp==0.15.0
 propcache==0.3.2
+pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+pypdf==5.9.0
+pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 PyYAML==6.0.2
 redis==6.4.0
 referencing==0.36.2
@@ -58,11 +74,13 @@ six==1.17.0
 smolagents==1.21.3
 sniffio==1.3.1
 soupsieve==2.8
+tabulate==0.9.0
 tiktoken==0.11.0
 tokenizers==0.22.0
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 Werkzeug==3.1.3
 Wikipedia-API==0.8.1
