--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@ ENVIRONMENT=development
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_DB=0 
+REDIS_DB=0
 
 NEXA_API=http://localhost:5000
 
-LITELLM_REQUEST_TIMEOUT=1800 # ollama request timeout in seconds.
+LITELLM_REQUEST_TIMEOUT=7200 # ollama request timeout in seconds.
+OLLAMA_URI=http://localhost:11434
 OLLAMA_NUM_PARALLEL=4        # ollama model's concurrency limit.
