chore: Configuração inicial do BD vetorial Chroma

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ NEXA_API=http://localhost:5000
 LITELLM_REQUEST_TIMEOUT=7200 # ollama request timeout in seconds.
 OLLAMA_URI=http://localhost:11434
 OLLAMA_NUM_PARALLEL=4        # ollama model's concurrency limit.
+
+# Chroma DB
+ANONYMIZED_TELEMETRY=False
+CUDA_VISIBLE_DEVICES=0  # use CPU instead of GPU
+CHROMA_PORT=8000
