--- a/requirements.txt
+++ b/requirements.txt
@@ -5,54 +5,103 @@ annotated-types==0.7.0
 anyio==4.10.0
 async-timeout==5.0.1
 attrs==25.3.0
+backoff==2.2.1
+bcrypt==5.0.0
 beautifulsoup4==4.13.5
 blinker==1.9.0
+build==1.3.0
+cachetools==6.2.1
 camelot-py==1.0.9
 certifi==2025.8.3
 cffi==2.0.0
 chardet==5.2.0
 charset-normalizer==3.4.3
+chromadb==1.2.1
 click==8.2.1
+coloredlogs==15.0.1
 cryptography==46.0.2
 ddgs==9.5.5
 distro==1.9.0
+durationpy==0.10
 et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 fastuuid==0.12.0
 filelock==3.19.1
 Flask==3.1.2
+flatbuffers==25.9.23
 frozenlist==1.7.0
 fsspec==2025.9.0
+google-auth==2.41.1
+googleapis-common-protos==1.71.0
+grpcio==1.76.0
 h11==0.16.0
 hf-xet==1.1.9
 httpcore==1.0.9
+httptools==0.7.1
 httpx==0.28.1
 huggingface-hub==0.34.4
+humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.7.0
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+kubernetes==34.1.0
 litellm==1.76.3
 lxml==6.0.1
 markdown-it-py==4.0.0
 markdownify==1.2.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
 multidict==6.6.4
+networkx==3.5
 numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
+oauthlib==3.3.1
+onnxruntime==1.23.2
 openai==1.106.1
 opencv-python-headless==4.12.0.88
 openpyxl==3.1.5
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+orjson==3.11.3
+overrides==7.7.0
 packaging==25.0
 pandas==2.3.3
 pdfminer.six==20250506
 pdfplumber==0.11.7
 pillow==11.3.0
+posthog==5.4.0
 primp==0.15.0
 propcache==0.3.2
+protobuf==6.33.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
 pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
@@ -60,6 +109,8 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 pypdf==5.9.0
 pypdfium2==4.30.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
@@ -68,20 +119,40 @@ redis==6.4.0
 referencing==0.36.2
 regex==2025.9.1
 requests==2.32.5
+requests-oauthlib==2.0.0
 rich==14.1.0
 rpds-py==0.27.1
+rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.2
+setuptools==80.9.0
+shellingham==1.5.4
 six==1.17.0
 smolagents==1.21.3
 sniffio==1.3.1
 soupsieve==2.8
+sympy==1.14.0
 tabulate==0.9.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.11.0
 tokenizers==0.22.0
+torch==2.9.0
 tqdm==4.67.1
+transformers==4.57.1
+triton==3.5.0
+typer==0.20.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==2.3.0
+uvicorn==0.38.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websocket-client==1.9.0
+websockets==15.0.1
 Werkzeug==3.1.3
 Wikipedia-API==0.8.1
 yarl==1.20.1
