fix: erro na importação do agente Classificator

--- a/agents/prompts/classificator_agent/system_prompt.yaml
+++ b/agents/prompts/classificator_agent/system_prompt.yaml
@@ -134,6 +134,13 @@ planning:
     - Define the next concrete steps (e.g., re-query with a refined description, format output)
     - Ensure the new plan stays within your allowed tools and protocol
 
+managed_agent:
+  task: |-
+
+
+  report: |-
+
+
 final_answer:
   pre_messages: |-
     Before calling `final_answer`, confirm:
