feat: add código EX (excessão) associado ao NCM no sistema RAG

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ OLLAMA_NUM_PARALLEL=4        # ollama model's concurrency limit.
 ANONYMIZED_TELEMETRY=False
 CUDA_VISIBLE_DEVICES=0  # use CPU instead of GPU
 CHROMA_PORT=8000
+CHROMA_DEVICE=cpu
